--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Display all the folders and files from your local drive",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "author": "'Bharath'",
